# ChangeLog file for java
# This file is updated with Maddlog

* Mon Feb  7 2011 Fabian Groffen <fabian@cwi.nl>
- Removed XQuery related XRPC wrapper and XML:DB code
