@@ -116,7 +116,7 @@ final public class MonetDriver implements Driver {
 		// set the optional properties and their defaults here
 		props.put("port", PORT);
 		props.put("debug", "false");
-		props.put("language", "sql");	// mil, mal, sql, xquery, whatever
+		props.put("language", "sql");	// mal, sql, <future>
 		props.put("java_prepared_statements", "false");
 
 		props.putAll(info);
@@ -222,7 +222,7 @@ final public class MonetDriver implements Driver {
 
 		prop = new DriverPropertyInfo("language", "sql");
 		prop.required = false;
-		prop.description = "What language to use for MonetDB conversations (sql/xquery)";
+		prop.description = "What language to use for MonetDB conversations (experts only)";
 		props.add(prop);
 
 		prop = new DriverPropertyInfo("hash", "");
