@@ -2,5 +2,6 @@
 # This file is updated with Maddlog
 
 * Mon Feb  7 2011 Fabian Groffen <fabian@cwi.nl>
-- Removed XQuery related XRPC wrapper and XML:DB code
+- Removed XQuery related XRPC wrapper and XML:DB code, removed support
+  for language=xquery and language=mil from JDBC.
 
